--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" type="png" href="favicon.png" />
 
     <title>Movie Box</title>
   </head>
